<resources>
    <string name="app_name">Energeye</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">SignUpActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="inserisci_una_email">Inserisci una email</string>
    <string name="inserisci_una_password">Inserisci una password</string>
    <string name="crea_account">Crea account</string>
    <string name="energeye">Energeye</string>
    <string name="hai_gi_un_account_clicca_qui">Hai già un account? Clicca qui</string>
    <string name="crea_un_account">Crea un account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="hai_dimenticato_la_password">Hai dimenticato la password?</string>
    <string name="title_activity_login">Login</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati!</string>
    <string name="empty">Inserisci l\'email e la password</string>
    <string name="reset_password">Abbiamo inviato un\'email per aiutarti a reimpostare la tua password.</string>
    <string name="error">Si è verificato un errore.</string>
    <string name="profile">Profilo</string>
    <string name="grafici">Oggi</string>
    <string name="storico">Storico</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="undefinedvalue">---</string>
    <string name="seleziona_la_tua_tariffa">Seleziona la tua tariffa</string>
    <string name="conferma">CONFERMA</string>
    <string name="errorFareSelection">Errore nella selezione della tariffa</string>
    <string name="select_your_fare">Seleziona la tua tariffa</string>
    <string name="select_your_fare_short">Tariffa</string>
    <string name="totale">Totale</string>
    <string name="kw">kW</string>
    <string name="kwh">kWh</string>
    <string name="eur">€</string>
    <string name="consumo_totale">Consumo totale</string>
    <string name="seleziona_una_data">Seleziona una data</string>
    <string name="select_year">Seleziona un anno</string>
    <string name="loading">Caricamento in corso...</string>
    <string name="touch_here_to_insert">Tocca qui per inserirlo</string>
    <string name="deactivated">Disattivato</string>
    <string name="activated">Attivato</string>

    <string-array name="year_array">
        <item>Seleziona un anno</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>

</resources>
