<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="16">



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/fare_picker_spinner_day"
                    android:textAlignment="center"
                    android:singleLine="true"
                    app:ms_background_color="#eeeeee"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/select_your_fare" />
                <EditText
                    android:textAlignment="center"
                    android:id="@+id/day_date"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="#EEEEEE"
                    android:hint="@string/seleziona_una_data"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:inputType="none" />



            </LinearLayout>

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp">

                    <TextView
                        android:id="@+id/textView1_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/consumo_totale"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/textPrimary"/>


                    <LinearLayout
                        android:id="@+id/cons_ll"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView1_day"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/day_kwh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/undefinedvalue"
                            android:textColor="@color/textPrimary"
                            android:textSize="20sp"
                            android:layout_below="@id/textView1_day"/>

                        <TextView
                            android:id="@+id/day_kw_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="@color/textPrimary"
                            android:text="@string/kw"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cons_ll"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/day_eur"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/undefinedvalue"
                            android:textColor="@color/textPrimary"
                            android:textSize="24sp"
                            android:layout_below="@id/day_kwh"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="@color/textPrimary"
                            android:text="@string/eur"
                            android:textSize="20sp"
                            android:layout_toRightOf="@id/day_eur"
                            android:layout_alignBaseline="@id/day_eur"/>
                    </LinearLayout>

                </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/loading_day"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:text="@string/loading"
            android:textAlignment="center"
            android:gravity="center"/>
        <com.jjoe64.graphview.GraphView
            android:visibility="gone"
            android:id="@+id/day_graph"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginLeft="-12dp"
            android:layout_marginStart="-12dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"/>
    </LinearLayout>



</ScrollView>